Add upload to db front-end

--- a/roadshow/tool/templates/tool/index.html
+++ b/roadshow/tool/templates/tool/index.html
@@ -96,6 +96,13 @@
               </div>
             </div>
           </div>
+          <!-- Row Three -->
+          <div class="row align-items-start">
+            <div class="container text-center mt-4">
+              <h5>Upload to Database</h5>
+              <button class="btn btn-danger" id="btnUpload" onclick="">Upload</button>
+            </div>
+          </div>
         </div>
       </section>
 
