Add unclass banner

--- a/roadshow/tool/templates/tool/index.html
+++ b/roadshow/tool/templates/tool/index.html
@@ -22,6 +22,11 @@
   <body>
 
     <header>
+      <!-- Unclass banner -->
+      <div class="text-light text-center mt-auto bg-success">
+        <strong>UNCLASSIFIED</strong>
+      </div>
+      <!-- Navbar -->
       <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
           <div class="row">
@@ -144,10 +149,14 @@
 
     <footer class="text-muted">
       <div class="container">
+        <strong>Thank you!</strong>
+      </div>
+      <!-- Unclass banner -->
+      <div class="text-light text-center mt-auto bg-success">
+        <strong>UNCLASSIFIED</strong>
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <strong>Thank you!</strong>
       </div>
     </footer>
 
