--- a/roadshow/tool/templates/tool/index.html
+++ b/roadshow/tool/templates/tool/index.html
@@ -8,7 +8,7 @@
     {% load static %}
     <link rel="icon" type="image" href="{% static 'tool/img/AETC_Shield_Fancy_small.png' %}">
 
-    <title>AETC Roadshow Demo</title>
+    <title>333d Courseware as Code</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/album/">
 
@@ -45,11 +45,11 @@
           </div>
         </div>
       </div>
-      <div class="navbar navbar-dark parallax-color shadow-sm">
+      <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
             <img class="icon mr-2" src="{% static 'tool/img/AETC_Shield_Fancy_small.png' %}" alt="Logo" srcset="">
-            <strong>AETC Roadshow</strong>
+            <strong>Courseware as Code</strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -131,12 +131,14 @@
                 </div>
                 <div class="col-md-6 mb-4">
                   <!-- Authors -->
-                  <h3 class="h3 mb-3">Authors</h3>
+                  <h3 class="h3 mb-1">Authors</h3>
                   <hr>
-                  <h4>Neel Kotak</h4>
-                  <p> neelkotak13@gmail.com</p>
-                  <h4>Jack Long</h4>
-                  <p> jack.richard.long@gmail.com</p>
+                  <h4 >Jack Long</h4>
+                  <a href="https://github.com/Jack-R-Long">https://github.com/Jack-R-Long</a>
+                  <h4 class="mt-2">Alexander Mundy</h4>
+                  <a href="https://github.com/amundy14">https://github.com/amundy14</a>
+                  <h4 class="mt-2">Neel Kotak</h4>
+                  <a href="https://github.com/neelkotak13">https://github.com/neelkotak13</a>
                   <!-- Authors -->
                 </div>
               </div>
@@ -162,7 +164,6 @@
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <!-- Boostrap js -->
     <script src="{% static '/tool/js/bootstrap.min.js' %}"></script>
     <!-- Custom js -->
