--- a/roadshow/tool/templates/tool/new.html
+++ b/roadshow/tool/templates/tool/new.html
@@ -77,17 +77,17 @@
             <!-- XML Output -->
             <div class="container text-center mt-4">
               <h5>Data</h5>
-              <textarea  class="form-control"id="xmlOut" rows="10"></textarea>
+              <div id="csv-display"></div>
             </div>
           </div>
 
           <!-- Row Two -->
-          <div class="row align-items-start">
+          <!-- <div class="row align-items-start">
             <div class="container text-center mt-4">
               <h5>Upload to Database</h5>
               <button class="btn btn-danger" id="btnUpload" onclick="">Upload</button>
             </div>
-          </div>
+          </div> -->
       </section>
 
       <div class="parallax">
